<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.appquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo"
            style="@style/Perguntas"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center_horizontal"
            android:text="@string/texto_titulo"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <LinearLayout
            style="@style/ViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pergunta1"
                style="@style/Perguntas"
                android:text="@string/pergunta1" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op1p1" />

                <RadioButton
                    android:id="@+id/resposta1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op2p1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op3p1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op4p1" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/ViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pergunta2"
                style="@style/Perguntas"
                android:text="@string/pergunta2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb1p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op1p2" />

                <CheckBox
                    android:id="@+id/cb2p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op2p2" />

                <CheckBox
                    android:id="@+id/cb3p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op3p2" />

                <CheckBox
                    android:id="@+id/cb4p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op4p2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/ViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pergunta3"
                style="@style/Perguntas"
                android:text="@string/pergunta3" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/resposta3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op1p3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op2p3" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            style="@style/ViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pergunta4"
                style="@style/Perguntas"
                android:text="@string/pergunta4" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb1p4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op1p4" />

                <CheckBox
                    android:id="@+id/cb2p4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op2p4" />

                <CheckBox
                    android:id="@+id/cb3p4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op3p4" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/ViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pergunta5"
                style="@style/Perguntas"
                android:text="@string/pergunta5" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op1p5" />

                <RadioButton
                    android:id="@+id/resposta5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op2p5" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op3p5" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/op4p5" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            style="@style/ViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pergunta6"
                style="@style/Perguntas"
                android:text="@string/pergunta6" />

            <EditText
                android:id="@+id/resposta6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintP6" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="20dp"
            android:onClick="gerarRespostas"
            android:text="@string/btnResposta" />
    </LinearLayout>

</ScrollView>
